Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -986,7 +986,15 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "43a18390-c881-4188-a6f3-13b589590710",
-      "metadata": {},
+      "metadata": {
+        "noteable": {
+          "output_collection_id": "20c15316-95f5-49a0-ae60-65dbabf21f5b"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-01T08:09:52.036309+00:00",
+          "start_time": "2023-07-01T08:09:51.495205+00:00"
+        }
+      },
       "outputs": [],
       "source": "index2word = {v: k for k, v in tokenizer.get_vocab().items()}\nindex2word[0] = 'pad'\n\n#test on a validation sentence\nsent_idx = 100\nsent_encoded = encoder(torch.from_numpy(data['question1'][sent_idx]).to(device))\nx_test_reconstructed = decoder(sent_encoded)\nreconstructed_indexes = torch.argmax(x_test_reconstructed, dim=1).cpu().numpy()\nword_list = list(np.vectorize(index2word.get)(reconstructed_indexes))\nprint(' '.join(word_list))\noriginal_sent = list(np.vectorize(index2word.get)(data['question1'][sent_idx]))\nprint(' '.join(original_sent))"
     },
@@ -1107,7 +1115,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "d91dcc2c-fa7f-4b58-bf7c-814247dcca30"
+      "last_transaction_id": "162408da-2830-4e64-a2a5-3f0d0bcfa652"
     },
     "noteable-chatgpt": {
       "create_notebook": {
