Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -1093,6 +1093,40 @@
         "\n",
         "new_sents_interp(sentence1, sentence2, 5)"
       ]
+    },
+    {
+      "id": "c62c9bd3-f387-436f-b399-0241f2413cb6",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "04544167-be72-401c-a5fe-7e347c101fac"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-01T08:10:44.652129+00:00",
+          "start_time": "2023-07-01T08:10:44.488358+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# function to parse a sentence\ndef sent_parse(sentence, tokenizer, device):\n    sequence = tokenizer.encode_plus(sentence, return_tensors='pt')\n    return sequence['input_ids'].to(device)\n\n# input: encoded sentence vector\n# output: encoded sentence vector in dataset with highest cosine similarity\ndef find_similar_encoding(sent_vect, encoded_data):\n    all_cosine = []\n    for sent in encoded_data:\n        result = 1 - spatial.distance.cosine(sent_vect.cpu().numpy(), sent.cpu().numpy())\n        all_cosine.append(result)\n    data_array = np.array(all_cosine)\n    maximum = data_array.argsort()[-3:][::-1][1]\n    new_vec = encoded_data[maximum]\n    return new_vec\n\n# input: two points, integer n\n# output: n equidistant points on the line between the input points (inclusive)\ndef shortest_homology(point_one, point_two, num):\n    dist_vec = point_two - point_one\n    sample = np.linspace(0, 1, num, endpoint = True)\n    hom_sample = []\n    for s in sample:\n        hom_sample.append(point_one + s * dist_vec)\n    return hom_sample\n\n# input: original dimension sentence vector\n# output: sentence text\ndef print_latent_sentence(sent_vect, decoder, index2word):\n    sent_vect = sent_vect.unsqueeze(0)\n    sent_reconstructed = decoder(sent_vect)\n    reconstructed_indexes = torch.argmax(sent_reconstructed, dim=2).squeeze().cpu().numpy()\n    word_list = list(np.vectorize(index2word.get)(reconstructed_indexes))\n    print(' '.join(word_list))\n\ndef new_sents_interp(sent1, sent2, n, tokenizer, device, encoder, decoder, index2word):\n    tok_sent1 = sent_parse(sent1, tokenizer, device)\n    tok_sent2 = sent_parse(sent2, tokenizer, device)\n    enc_sent1 = encoder(tok_sent1)\n    enc_sent2 = encoder(tok_sent2)\n    test_hom = shortest_homology(enc_sent1, enc_sent2, n)\n    for point in test_hom:\n        print_latent_sentence(point, decoder, index2word)",
+      "outputs": []
+    },
+    {
+      "id": "944f9619-5d6a-4318-a786-254d49ac05c8",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "8089d428-bf6c-4c15-bb80-f404792e35ec"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-01T08:10:57.024066+00:00",
+          "start_time": "2023-07-01T08:10:56.847222+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "sentence1='where can i find a bad restaurant'\nsentence2='where can i find an extremely good restaurant'\nnew_sents_interp(sentence1, sentence2, 5, tokenizer, device, encoder, decoder, index2word)",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1115,7 +1149,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "162408da-2830-4e64-a2a5-3f0d0bcfa652"
+      "last_transaction_id": "1cba9de5-2d76-4de9-b952-c131f36f746f"
     },
     "noteable-chatgpt": {
       "create_notebook": {
