--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -50,9 +50,59 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "510d482e-543f-4285-bc26-dd5975c5245a"
+          "output_collection_id": "a3c26c90-6ed1-42e5-8e32-3fbb8e053d8b"
         },
-        "tags": []
+        "tags": [],
+        "ExecuteTime": {
+          "end_time": "2023-07-01T08:31:46.481370+00:00",
+          "start_time": "2023-07-01T08:31:46.270712+00:00"
+        },
+        "datalink": {
+          "f1f96dfe-fa99-4fcc-9d22-955b548e3cea": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 3,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 160,
+              "truncated_num_cols": 3,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 160,
+              "truncated_string_columns": []
+            },
+            "display_id": "f1f96dfe-fa99-4fcc-9d22-955b548e3cea",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-01T08:31:46.323576",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_36d091ff34c54ed7acddca45677cd53d"
+          }
+        }
       },
       "outputs": [],
       "source": "# Define the number of rows to load (set to None to load all rows)\nnum_rows = None  # Replace with the desired number of rows to load, or set to None for all rows\n\n# Load the data\nif num_rows is None:\n    data = pd.read_csv('test_small.csv')\nelse:\n    data = pd.read_csv('test_small.csv', nrows=num_rows)\n\ndata.head()\n"
@@ -631,7 +681,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "b0db38aa-475d-4ef9-a622-71ffc6a21749"
+      "last_transaction_id": "82a633c0-7a0b-4a2d-944b-3d70b724426e"
     },
     "noteable-chatgpt": {
       "create_notebook": {
