Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -50,12 +50,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "688c2892-87fa-4f96-ba98-75fa1e0c7c1f"
+          "output_collection_id": "21cb54e4-b05e-40eb-8249-21612383aeaa"
         },
         "tags": [],
         "ExecuteTime": {
-          "end_time": "2023-07-01T08:33:58.351761+00:00",
-          "start_time": "2023-07-01T08:33:58.152390+00:00"
+          "end_time": "2023-07-01T08:36:10.200052+00:00",
+          "start_time": "2023-07-01T08:36:10.039840+00:00"
         },
         "datalink": {
           "f1f96dfe-fa99-4fcc-9d22-955b548e3cea": {
@@ -145,11 +145,55 @@
             "sampling_time": "2023-07-01T08:33:58.194404",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_779ea1025632421cab9811ac3919f528"
+          },
+          "70ccc09d-91df-4123-8749-67697c5c50e0": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 3,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 160,
+              "truncated_num_cols": 3,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 160,
+              "truncated_string_columns": []
+            },
+            "display_id": "70ccc09d-91df-4123-8749-67697c5c50e0",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-01T08:35:58.428284",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_fb9fbd413f7944e68dbc8533dea29afd"
           }
         }
       },
       "outputs": [],
-      "source": "# Define the number of rows to load (set to None to load all rows)\nnum_rows = None  # Replace with the desired number of rows to load, or set to None for all rows\n\n# Load the data\nif num_rows is None:\n    data = pd.read_csv('test_small.csv')\nelse:\n    data = pd.read_csv('test_small.csv', nrows=num_rows)\n\ndata.head()\n"
+      "source": "# Define the number of rows to load (set to None to load all rows)\nnum_rows = None  # Replace with the desired number of rows to load, or set to None for all rows\n\n# Load the data\nif num_rows is None:\n    data = pd.read_csv('test_small.csv')\nelse:\n    data = pd.read_csv('test_small.csv', nrows=num_rows)\n\ndata.head()"
     },
     {
       "cell_type": "markdown",
@@ -732,7 +776,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "f03552d9-1441-4ec3-8709-301d64f3137d"
+      "last_transaction_id": "6c787cfb-9778-4a0e-89bf-1abdcc3a8acc"
     },
     "noteable-chatgpt": {
       "create_notebook": {
