Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -10,12 +10,15 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "1a46942f-4d9d-425f-98b1-8dbbd0545adc"
+          "output_collection_id": "5fd4cfb4-67a9-4bcc-9c6b-39c7fc7f95c1"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-07-01T08:39:22.427069+00:00",
+          "start_time": "2023-07-01T08:39:22.268263+00:00"
+        }
       },
       "execution_count": null,
-      "source": "pip install pytorch",
+      "source": "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu",
       "outputs": []
     },
     {
@@ -794,7 +797,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "f2cd4a4d-575a-4e1d-afe1-b3e1dd5371cc"
+      "last_transaction_id": "0816a23c-e9df-4fb0-89d8-0a4353e3b3f9"
     },
     "noteable-chatgpt": {
       "create_notebook": {
