Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -10,15 +10,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ce8c0954-fe4a-4bcd-87d3-a2e43a8f1870"
+          "output_collection_id": "92d2fa49-aca8-4047-9e63-d428fdc8faea"
         },
-        "ExecuteTime": {
-          "end_time": "2023-07-01T08:39:30.328579+00:00",
-          "start_time": "2023-07-01T08:39:30.170901+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
-      "source": "%pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu",
+      "source": "conda install pytorch torchvision torchaudio cpuonly -c pytorch",
       "outputs": []
     },
     {
@@ -797,7 +794,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "f6c655b0-23ce-4d31-a56b-05a613e4c332"
+      "last_transaction_id": "26ebf182-a2ba-4144-b5f0-d47d05666221"
     },
     "noteable-chatgpt": {
       "create_notebook": {
