--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -7,12 +7,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "13718a11-53b6-40f4-9520-91c79cc69645"
+          "output_collection_id": "ea1ce2b3-40f2-4f27-9e8f-e85312ef2afe"
         },
         "tags": [],
         "ExecuteTime": {
-          "end_time": "2023-07-01T08:35:49.819286+00:00",
-          "start_time": "2023-07-01T08:35:49.275523+00:00"
+          "end_time": "2023-07-01T09:03:41.490118+00:00",
+          "start_time": "2023-07-01T09:03:40.949102+00:00"
         }
       },
       "outputs": [],
@@ -50,7 +50,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "21cb54e4-b05e-40eb-8249-21612383aeaa"
+          "output_collection_id": null
         },
         "tags": [],
         "ExecuteTime": {
@@ -215,7 +215,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8cec67ee-adaf-4301-a165-733893d29def"
+          "output_collection_id": null
         },
         "tags": [],
         "jupyter": {
@@ -250,7 +250,7 @@
       "id": "2c1c8a7f-c22d-4868-a532-5a806fda50a1",
       "metadata": {
         "noteable": {
-          "output_collection_id": "1903c21e-4c13-4932-8e57-a80c2b9f1c12"
+          "output_collection_id": null
         },
         "tags": [],
         "ExecuteTime": {
@@ -275,7 +275,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3e9d1afc-e65f-4abf-a8d7-9603b96c6a8d"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -322,7 +322,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "cfa3697e-4a6d-4426-96b7-b03f45ec7ab3"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -352,7 +352,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "9a9781c1-b3ed-433e-a28f-19ea75a1da07"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -394,7 +394,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "734993a1-070d-440e-a69a-5006881574bf"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -420,7 +420,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c1d7d5a7-10e6-4bc6-85ba-cd6162756ba7"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -464,7 +464,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d3dc6d2f-3698-4acc-be0a-e84a064afd47"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -496,7 +496,7 @@
       "metadata": {
         "tags": [],
         "noteable": {
-          "output_collection_id": "9e1877fa-69d5-4fb4-93a3-60c270b1d9ee"
+          "output_collection_id": null
         }
       },
       "outputs": [],
@@ -544,7 +544,7 @@
           "start_time": "2023-07-01T08:09:51.495205+00:00"
         },
         "noteable": {
-          "output_collection_id": "43a3ae36-e1fd-4a29-8fd0-cdc5e6bf245b"
+          "output_collection_id": null
         },
         "tags": []
       },
@@ -580,7 +580,7 @@
       "id": "50224de7-dbdb-4ac2-9b6f-c22ddbb531bb",
       "metadata": {
         "noteable": {
-          "output_collection_id": "8689d4eb-f224-4ea0-a167-bc3158e67544"
+          "output_collection_id": null
         }
       },
       "outputs": [],
@@ -647,7 +647,7 @@
       "id": "55bf6b6e-8280-41d7-80dc-f269123fd65c",
       "metadata": {
         "noteable": {
-          "output_collection_id": "c1b71fec-576c-492e-9680-ba6be37b8196"
+          "output_collection_id": null
         }
       },
       "outputs": [],
@@ -679,7 +679,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5f5ad285-30ce-4c54-b173-ce277c2b2bb7"
+          "output_collection_id": null
         }
       },
       "outputs": [],
@@ -741,7 +741,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e7f4c458-35b6-4857-867a-ed65797eca91"
+          "output_collection_id": null
         }
       },
       "outputs": [],
@@ -776,7 +776,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "f44b6402-ef7d-48cc-81f8-aba435ac16b2"
+      "last_transaction_id": "151d199a-f21a-47da-881c-b707eb8ec6ac"
     },
     "noteable-chatgpt": {
       "create_notebook": {
