Commit from Noteable
Updating project file cache

--- a/text_VAE_PyTorch_v2.1.ipynb
+++ b/text_VAE_PyTorch_v2.1.ipynb
@@ -10,15 +10,33 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "3cff6077-bd3e-43ba-b6c4-54890845f438"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-01T22:58:57.560132+00:00",
-          "start_time": "2023-07-01T22:58:43.790900+00:00"
+          "end_time": "2023-07-01T23:09:00.913254+00:00",
+          "start_time": "2023-07-01T23:09:00.755486+00:00"
         }
       },
       "execution_count": null,
       "source": "#pip install transformers",
+      "outputs": []
+    },
+    {
+      "id": "131572d3-a618-4d62-876d-9d43b623be74",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "0d4964db-1b43-45aa-a223-6bcc5a49ac92"
+        },
+        "ExecuteTime": null
+      },
+      "execution_count": null,
+      "source": "pip install --upgrade accelerate",
       "outputs": []
     },
     {
@@ -28,12 +46,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "5ac645c1-3926-48cb-8899-0b623ea49869"
         },
         "tags": [],
         "ExecuteTime": {
-          "end_time": "2023-07-01T10:31:43.281347+00:00",
-          "start_time": "2023-07-01T10:31:42.754358+00:00"
+          "end_time": "2023-07-01T23:07:46.473308+00:00",
+          "start_time": "2023-07-01T23:07:45.962299+00:00"
         }
       },
       "outputs": [],
@@ -797,7 +815,7 @@
     },
     "noteable": {
       "last_delta_id": "4a3fbf04-ef34-460b-b616-055e9285c30e",
-      "last_transaction_id": "9525cce9-3d95-4478-99ac-db245ac4b275"
+      "last_transaction_id": "e8a76482-37eb-4abd-ae0c-96cace2dbd9e"
     },
     "noteable-chatgpt": {
       "create_notebook": {
